--- a/UI/style.css
+++ b/UI/style.css
@@ -14,7 +14,8 @@ body {
     text-decoration: none;
     padding: 10px;
     margin: 0px;
-     
+    margin-top: 200px;
+
   }
 
   #searchBar {
@@ -22,7 +23,7 @@ body {
     text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
-    
+ 
   }
   
   form {
